Fix IE scrollbar theme, and highlight Run button

--- a/Browser_IDE/stylesheet.css
+++ b/Browser_IDE/stylesheet.css
@@ -11,6 +11,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  color-scheme: dark;
 }
 img, picture, video, canvas, svg {
   display: block;
@@ -297,6 +298,10 @@ textarea {
 
 .sk-terminal > :nth-child(2) {
     margin-top: auto !important;
+}
+
+#runProgram {
+    color: #9fff69;
 }
 
 .sk-terminal-input-wrapper {
